[gd_scene load_steps=7 format=3 uid="uid://cmcd7u2mwxe1j"]

[ext_resource type="Script" path="res://Scripts/Menus/onlineMenu.gd" id="1_ct3vf"]
[ext_resource type="Texture2D" uid="uid://e6yba23ue0sd" path="res://Assets/GUI/FinalGUIAssets/FinalBackground.png" id="1_ymxrl"]
[ext_resource type="FontFile" uid="uid://bivxf3m2badh3" path="res://Assets/Font/PixelSerif_16px_v02.otf" id="2_8r67x"]
[ext_resource type="Theme" uid="uid://yk36rhjn0d1b" path="res://Themes/MenuButtons.tres" id="3_8wqdl"]
[ext_resource type="Theme" uid="uid://dxfaogmdf3ii4" path="res://Themes/Map1Display.tres" id="5_8vdmk"]
[ext_resource type="Theme" uid="uid://ceo5ni24hu6cy" path="res://Themes/PlayButton.tres" id="8_l3hva"]

[node name="OnlineMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ct3vf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ymxrl")

[node name="OuterMargins" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 82
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 80

[node name="Content" type="VBoxContainer" parent="OuterMargins"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="TitleandQuitBox" type="HBoxContainer" parent="OuterMargins/Content"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2

[node name="Sep3" type="Control" parent="OuterMargins/Content/TitleandQuitBox"]
custom_minimum_size = Vector2(70, 100)
layout_mode = 2

[node name="BackToMenuButton" type="Button" parent="OuterMargins/Content/TitleandQuitBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme = ExtResource("3_8wqdl")
theme_override_fonts/font = ExtResource("2_8r67x")
theme_override_font_sizes/font_size = 32
text = "Main Menu"

[node name="Sep1" type="Control" parent="OuterMargins/Content/TitleandQuitBox"]
custom_minimum_size = Vector2(441, 100)
layout_mode = 2

[node name="GameOver" type="Label" parent="OuterMargins/Content/TitleandQuitBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 15
theme_override_constants/shadow_offset_y = 15
theme_override_constants/outline_size = 24
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("2_8r67x")
theme_override_font_sizes/font_size = 122
text = "Online
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sep2" type="Control" parent="OuterMargins/Content/TitleandQuitBox"]
custom_minimum_size = Vector2(435, 100)
layout_mode = 2

[node name="QuitButton" type="Button" parent="OuterMargins/Content/TitleandQuitBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme = ExtResource("3_8wqdl")
theme_override_fonts/font = ExtResource("2_8r67x")
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="StatsMargin" type="MarginContainer" parent="OuterMargins/Content"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
theme_override_constants/margin_left = 350
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 350

[node name="MapPicContainer" type="HBoxContainer" parent="OuterMargins/Content/StatsMargin"]
layout_mode = 2

[node name="MapPic" type="TextureRect" parent="OuterMargins/Content/StatsMargin/MapPicContainer" groups=["OnlineMenu"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_8vdmk")

[node name="RoundsLeftTextContainer" type="HBoxContainer" parent="OuterMargins/Content"]
layout_mode = 2

[node name="RoundsLeftTextMargin" type="MarginContainer" parent="OuterMargins/Content/RoundsLeftTextContainer"]
layout_mode = 2
theme_override_constants/margin_left = 740

[node name="ReadyText" type="Label" parent="OuterMargins/Content/RoundsLeftTextContainer/RoundsLeftTextMargin"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_8r67x")
theme_override_font_sizes/font_size = 32
text = "Players ready:  "
horizontal_alignment = 1
vertical_alignment = 1

[node name="RoundCountMargin" type="MarginContainer" parent="OuterMargins/Content/RoundsLeftTextContainer"]
layout_mode = 2
theme_override_constants/margin_right = 0

[node name="ReadyCount" type="Label" parent="OuterMargins/Content/RoundsLeftTextContainer/RoundCountMargin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.827451, 0.4, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_8r67x")
theme_override_font_sizes/font_size = 48
text = "0"

[node name="RoundCountMargin2" type="MarginContainer" parent="OuterMargins/Content/RoundsLeftTextContainer/RoundCountMargin"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 0

[node name="Slash" type="Label" parent="OuterMargins/Content/RoundsLeftTextContainer/RoundCountMargin/RoundCountMargin2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.827451, 0.4, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_8r67x")
theme_override_font_sizes/font_size = 48
text = "/"

[node name="RoundCountMargin3" type="MarginContainer" parent="OuterMargins/Content/RoundsLeftTextContainer/RoundCountMargin/RoundCountMargin2"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 0

[node name="MaxPlayerCount" type="Label" parent="OuterMargins/Content/RoundsLeftTextContainer/RoundCountMargin/RoundCountMargin2/RoundCountMargin3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.827451, 0.4, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_8r67x")
theme_override_font_sizes/font_size = 48
text = "3"

[node name="NextRoundMargin" type="MarginContainer" parent="OuterMargins/Content"]
layout_mode = 2
theme_override_constants/margin_left = 470
theme_override_constants/margin_right = 430

[node name="NextRoundBox" type="HBoxContainer" parent="OuterMargins/Content/NextRoundMargin"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2

[node name="ReadyButton" type="Button" parent="OuterMargins/Content/NextRoundMargin/NextRoundBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 125)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme = ExtResource("8_l3hva")
theme_override_fonts/font = ExtResource("2_8r67x")
theme_override_font_sizes/font_size = 48
text = "Ready"

[connection signal="pressed" from="OuterMargins/Content/TitleandQuitBox/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
[connection signal="pressed" from="OuterMargins/Content/TitleandQuitBox/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="OuterMargins/Content/NextRoundMargin/NextRoundBox/ReadyButton" to="." method="_on_ready_button_pressed"]
